# 2026-1-Squad13

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  docker-compose.yml  package-lock.json  start_dev.sh  test_all.sh
backend/: .env  .env.example  Dockerfile  pyproject.toml  pytest.ini  test_db.db
backend/src/: audit_db.py  drop_legacy_tables.py  init_db.py  main.py  seed.py
backend/src/application/ports/: cache_provider.py  email_sender_provider.py  password_reset_token_provider.py  token_blacklist_provider.py  user_repository.py
backend/src/application/services/: auth_service.py  buscar_proposicoes_service.py  dashboard_service.py  detalhe_proposicao_service.py  gerar_estimativa_service.py  listar_movimentacoes_service.py  listar_tramitacoes_service.py  normalizar_tramitacao_service.py  recuperacao_senha_service.py
backend/src/domain/: classificar_evento.py  exceptions.py
backend/src/domain/entities/: __init__.py  evento_tramitacao.py  fase_analitica.py  (+6 more)
backend/src/infrastructure/: config.py  database.py
backend/src/presentation/: auth_dependencies.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_app.py  test_auth_api.py  test_camara_adapter.py  test_movimentacoes_api.py  test_proposicao_api.py  test_proposicao_detalhe.py  test_senado_adapter.py
backend/tests/unit/: conftest.py  test_auth_lockout.py  test_buscar_proposicoes_service.py  test_camara_adapter.py  test_classificar_evento.py  test_dashboard_on_the_fly.py  test_dashboard_service.py  test_dashboard_service_analitico.py  test_dashboard_service_extended.py  test_determinar_fase.py  test_estimativa_aprovacao_service.py  test_evento_dto.py  test_evento_tramitacao_entity.py  test_listar_movimentacoes_service.py  test_listar_tramitacoes_service.py  test_logout.py  test_normalizar_tramitacao_service.py  test_proposicao_entity.py  test_recuperacao_senha.py  test_repository_filtering.py  test_senado_adapter.py  test_sql_evento_tramitacao_repository.py  test_sql_fase_analitica_repository.py  test_sql_orgao_legislativo_repository.py  test_sql_repository.py  test_sql_tramitacao_repository.py  test_tramitacao_entity.py
(+165 files in other folders)
