[project]
name = "monitor-legislativo-backend"
version = "0.1.0"
description = "Backend do MVP de monitoramento legislativo"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]",
  "psycopg[binary]>=3.1.18",
  "pydantic>=2.0",
  "pydantic-settings>=2.2.1",
  "requests>=2.33.1",
  "sqlmodel>=0.0.16",
  "uvicorn[standard]",
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "integration: testes que chamam APIs externas (rodar com -m integration)",
]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
